# sc360

./: .gitignore  MVP_BUILD_PLAN.md  README.md  UPDATE.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
public/wasm/: libmysofa_wasm.wasm
public/worklets/: foa-binaural-decoder.worklet.js  foa-encoder.worklet.js
src/: main.jsx
src/app/: App.tsx  ChannelMeter.tsx  ObjectControls.tsx  RotaryKnob.tsx  SpatialGrid.tsx  styles.css
src/audio/: ambisonics.d.ts  audioEngine.ts  constants.ts  loadSofaToMemFs.js
src/audio/hrtf/: hrirBuiltIn.ts  initLibMySofa.js  sofaLoader.ts
src/audio/worklets/: foa-binaural-decoder.worklet.ts  foa-encoder.worklet.ts
wasm/libmysofa/: libmysofa_wasm.js
wasm/libmysofa/emscripten-build/: CMakeCache.txt  Makefile  cmake_install.cmake
wasm/libmysofa/wrapper/: CMakeLists.txt  config.h  mysofa_export.h  sofa_wrap.c
